--- a/TimeTable207.Api/TimeTable207.Services/TimeTable207.Services.csproj
+++ b/TimeTable207.Api/TimeTable207.Services/TimeTable207.Services.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TimeTable207.Repositories.Contracts\TimeTable207.Repositories.Contracts.csproj" />
     <ProjectReference Include="..\TimeTable207.Services.Contracts\TimeTable207.Services.Contracts.csproj" />
   </ItemGroup>
 
